--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
             <hr>
         </main>
-    <script src="/questao1.js"></script>
-    <script src="/questao2.js"></script>
+    <script src="./questao1.js"></script>
+    <script src="./questao2.js"></script>
 </body>
 </html>
