--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="tarefa">
                 <label for="senha">Senha</label>
                 <input type="password" name="senha" id="senha" keyup="senhaForte()">
-                <button id="btn" onclick="senhaForte()">Verificar</button>
+                <button id="btn" <!-- onclick="senhaForte()" --> >Verificar</button>
                 <div id="resposta2">
 
                 </div>
