--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p>Débora digitou uma string aleatória no campo de senha, porém ela não tem certeza se é uma senha forte. Para ajudar Débora, construa um algoritmo que informe qual é o número mínimo de caracteres que devem ser adicionados para uma string qualquer ser considerada segura</p>
             <div class="tarefa">
                 <label for="senha">Senha</label>
-                <input type="password" name="senha" id="senha" keyup="senhaForte()">
+                <input type="password" name="senha" id="senha" onkeyup="senhaForte()">
                 <button id="btn" <!-- onclick="senhaForte()" --> >Verificar</button>
                 <div id="resposta2">
 
