--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             <div class="tarefa">
                 <label for="senha">Senha</label>
                 <input type="password" name="senha" id="senha" onkeyup="senhaForte()">
-                <button id="btn" <!-- onclick="senhaForte()" --> >Verificar</button>
+                <button id="btn" >Verificar</button> <!-- onclick="senhaForte()" -->
                 <div id="resposta2">
-
+    
                 </div>
             </div>
             <hr>
