Tira o botão de verificação.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="tarefa">
                 <label for="senha">Senha</label>
                 <input type="password" name="senha" id="senha" onkeyup="senhaForte()">
-                <button id="btn" >Verificar</button> <!-- onclick="senhaForte()" -->
+               <!-- <button id="btn" >Verificar</button> <!-- onclick="senhaForte()" -->
                 <div id="resposta2">
     
                 </div>
